Fixes glitches with alignment
git-svn-id: https://plugins.svn.wordpress.org/print-money/trunk@1194281 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/template-css/twentyfourteen.css
+++ b/template-css/twentyfourteen.css
@@ -3,7 +3,12 @@
 	margin: 7px 24px 7px 0;
 	margin-left: -168px;
 }
+.print-money-wrapper.alignright {
+	margin: 7px 0 7px 24px;
+    margin-right: -168px;
+}
 .print-money-wrapper.aligncenter {
+	display:block;
 	overflow:hidden;
 	margin-bottom: 7px;
     margin-top: 7px;
